Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-685

Pass wrong pointer to transform connection track instance status when canceling a waiting query resource request

VotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    Attachments

      Activity

        This comment will be Viewable by All Users Viewable by All Users
        Cancel

        People

          yjin Yi Jin
          yjin Yi Jin
          Votes:
          0 Vote for this issue
          Watchers:
          3 Start watching this issue

          Dates

            Created:
            Updated:
            Resolved:

            Slack

              Issue deployment