HAWQ-685. Pass wrong pointer to transform connection track instance status when canceling a waiting query resource request